# CtyTerm

./: .gitignore  Cargo.toml  PLAN.md  README.md  TASKS.md  TASKS_PHASE1.md  TASKS_PHASE2.md  TASKS_PHASE3.md  TASKS_PHASE4.md  TASKS_PHASE4_AI_STREAMING.md  TASKS_PHASE4_CONFIG.md  TASKS_PHASE4_LINKS.md
.github/workflows/: release-windows.yml
config/: config.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/render/src/atlas/: mod.rs
crates/render/src/font/: mod.rs
crates/render/src/text_renderer/: mod.rs
crates/terminal_core/: Cargo.toml
crates/terminal_core/src/: lib.rs
crates/terminal_core/src/grid/: mod.rs
crates/terminal_core/src/pty/: mod.rs
crates/terminal_core/src/scrollback/: mod.rs
crates/terminal_core/src/vt_parser/: mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui/src/ai_panel/: mod.rs
crates/ui/src/config/: mod.rs
crates/ui/src/palette/: mod.rs
crates/ui/src/panes/: mod.rs
crates/ui/src/sidebar/: devicons.rs  mod.rs
crates/ui/src/tabs/: mod.rs
crates/ui/src/theme/: mod.rs
crates/ux_model/: Cargo.toml
crates/ux_model/src/: lib.rs
crates/ux_model/src/ai/: mod.rs
crates/ux_model/src/blocks/: mod.rs
crates/ux_model/src/export/: mod.rs
crates/ux_model/src/history/: mod.rs
crates/ux_model/src/search/: mod.rs
crates/ux_model/src/session/: mod.rs
docs/: phase0-design.md  phase1-plan.md  phase2-plan.md  phase3-plan.md  phase4-ai-streaming-plan.md  phase4-config-plan.md  phase4-links-plan.md  phase4-plan.md
